--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=demo
+spring.application.name=e-commerce
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.naming.physical-strategy=com.ecommerceservice.config.NamingStrategyConfig
