--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=e-commerce
 
+server.servlet.context-path=/e-commerce/api/v1
+server.port=9010
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
@@ -7,4 +10,5 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 
+spring.jpa.properties.hibernate.default_schema=e_commerce
 spring.jpa.hibernate.naming.physical-strategy=com.ecommerceservice.config.NamingStrategyConfig
