--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.default_schema=e_commerce
 spring.jpa.hibernate.naming.physical-strategy=com.ecommerceservice.config.NamingStrategyConfig
+
+
+notification.type.ids=1,2,3
