--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,13 +16,13 @@ spring.jpa.hibernate.naming.physical-strategy=com.ecommerceservice.config.Naming
 #kafka configuration
 spring.kafka.bootstrap-servers=localhost:9092
 
-# Producer config
+# Kafka Producer Config
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
-# Consumer config
+# Kafka Consumer Config
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 
 # Trusted package for consuming POJOs (optional)
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
